[project]
name = "earnings-calendar-spreads"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "finnhub-python>=2.4.0",
  "yfinance>=0.2.0",
  "scipy>=1.14.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]